<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.omayra.proyecto_pgl_omayra_valdivia.UpdateItem">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:paddingTop="20dp"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:textSize="18sp" />

        <TextView
            android:text="@string/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/status"
            android:paddingTop="20dp"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupStatus">

            <RadioButton
                android:text="@string/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbDone"
                android:layout_weight="1"/>

            <RadioButton
                android:text="@string/notDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbNotDone"
                android:layout_weight="1"/>


        </RadioGroup>

        <TextView
            android:text="@string/priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/priority"
            android:paddingTop="20dp"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupPriority">

            <RadioButton
                android:text="@string/low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbLow"
                android:layout_weight="1"/>

            <RadioButton
                android:text="@string/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbMedium"
                android:layout_weight="1"/>

            <RadioButton
                android:text="@string/high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbHigh"
                android:layout_weight="1"/>
        </RadioGroup>

        <TextView
            android:text="@string/timeDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeDate"
            android:paddingTop="20dp"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDate"
                android:layout_weight="0.21"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTime"
                android:layout_weight="0.21"
                android:textSize="18sp"
                android:gravity="right" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/chooseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btDate"
                android:layout_weight="1"
                android:onClick="chooseDate" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:text="@string/chooseTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btTime"
                android:layout_weight="1"
                android:onClick="chooseTime" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btCancel"
                android:layout_weight="1"
                android:onClick="cancel" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:text="@string/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btReset"
                android:layout_weight="1"
                android:onClick="reset" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:text="@string/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btUpdate"
                android:layout_weight="1"
                android:onClick="update" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
